# microservice-templates

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  env.example  main.py  pyproject.toml
backend/postgres/: __init__.py  check_connection.py  connection.py  models.py  routers.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: AppHeader.vue  HelloWorld.vue  MongoDBTest.vue  PostgresManager.vue  ThemeToggle.vue
frontend/src/components/PostgresManager/: ConnectionTest.vue  CustomQuery.vue  DatabaseInfo.vue  IndustryAnalysis.vue  IndustryComprehensive.vue  InstitutionalTrading.vue  StockChart.vue  StockList.vue  StockSearch.vue  StockTable.vue  TableDetail.vue  TablesList.vue  index.js
frontend/src/composables/: useHelloWorld.js  useIndustryAnalysis.js  useIndustryComprehensive.js  useInstitutionalTrading.js  useMongoDB.js  usePostgres.js  useStockChart.js  useStockList.js  useTheme.js
mongo-init/: init.js
